fix: correct discord-dark-background color value and apply dark mode background to container-component

--- a/src/app.css
+++ b/src/app.css
@@ -17,7 +17,7 @@
   --discord-success-hover: #217739;
   --discord-danger: #f23f43;
   --discord-danger-hover: #b92d30;
-  --discord-dark-background: rgb(54, 57, 62);
+  --discord-dark-background: #36393e;
   --discord-light-background: #f6f6f6;
 
   --font-geist-sans: "Geist Variable", sans-serif;
@@ -343,6 +343,7 @@
   }
 
   .container-component {
+    @apply dark:bg-[#373b3e] bg-[#d6d6d6];
     position: relative;
 
     &::before {
